objects/Content_Library__c.object
<CustomObject>
    <label>Content Library</label>
    <nameField>
        <label>Content Library Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Content Libraries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Market</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Popular</fullName>
                </value>
                <value>
                    <fullName>Trending</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Generic​</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
                <value>
                    <fullName>Skincare​</fullName>
                </value>
                <value>
                    <fullName>Make-up​</fullName>
                </value>
                <value>
                    <fullName>Fragrance​</fullName>
                </value>
                <value>
                    <fullName>Collection Privée​</fullName>
                </value>
                <value>
                    <fullName>Exclusive Offers​</fullName>
                </value>
                <value>
                    <fullName>Couture Accessories​</fullName>
                </value>
                <value>
                    <fullName>Other​</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Video_URL__c</fullName>
        <label>Video URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Expiry_Date__c</fullName>
        <label>Expiry Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Publish_Date__c</fullName>
        <label>Publish Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Displayed_Image__c</fullName>
        <formula>IF (NOT(ISBLANK(Preview_Image_URL__c)),IMAGE(Preview_Image_URL__c, &apos;Image&apos;, 75, 75),&quot;No Image Is Captured&quot;)</formula>
        <label>Displayed Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preview_Image_URL__c</fullName>
        <label>Preview Image URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Market_Multi_Select__c</fullName>
        <label>Market (Multi-Select)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Market</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Shareable_Image_URL__c</fullName>
        <label>Shareable Image URL</label>
        <type>Url</type>
    </fields>
    <recordTypes>
        <fullName>Image</fullName>
        <active>true</active>
        <label>Image</label>
    </recordTypes>
    <recordTypes>
        <fullName>Video</fullName>
        <active>true</active>
        <label>Video</label>
    </recordTypes>
</CustomObject>